# tensorflow-text8-input-data

./: .gitignore  README.md  Setup.hs  tensorflow-text8-input-data.cabal
src/TensorFlow/Examples/Text8/: InputData.hs
