name:                tensorflow-text8-input-data
version:             0.1.0.0
synopsis:            Downloader of input data for training word embedding vector.
description:         Please see README.md
homepage:            https://github.com/d61h6k4/tensorflow-text8-input-data#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dbihbka@protonmail.ch
copyright:           2017 Danil Petrov
category:            Machine learning
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.22
data-dir:            data
data-files:          *.zip

library
  hs-source-dirs:      src
  exposed-modules:     TensorFlow.Examples.Text8.InputData
  other-modules:       Paths_tensorflow_text8_input_data
  build-depends:       base >= 4.7 && < 5
                     , Cabal
                     , HTTP
                     , bytestring
                     , cryptonite
                     , directory
                     , filepath
                     , network-uri
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d61h6k4/tensorflow-text8-input-data
